--- a/randomizer.ui
+++ b/randomizer.ui
@@ -200,10 +200,6 @@
            </layout>
           </item>
          </layout>
-         <zorder>randomize_players</zorder>
-         <zorder>randomize_players</zorder>
-         <zorder></zorder>
-         <zorder></zorder>
          <zorder></zorder>
          <zorder></zorder>
          <zorder></zorder>
@@ -218,6 +214,25 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
+        <widget class="QGroupBox" name="groupBox_4">
+         <property name="title">
+          <string>All Games</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_10">
+          <item>
+           <widget class="QCheckBox" name="name_unnamed_skills">
+            <property name="text">
+             <string>Name unnamed skills</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
         <widget class="QGroupBox" name="groupBox">
          <property name="title">
           <string>Dawn of Sorrow</string>
@@ -226,7 +241,7 @@
           <item>
            <widget class="QCheckBox" name="fix_first_ability_soul">
             <property name="text">
-             <string>Fix first ability soul</string>
+             <string>Fix first ability soul bug</string>
             </property>
             <property name="checked">
              <bool>true</bool>
@@ -246,7 +261,7 @@
           <item>
            <widget class="QCheckBox" name="no_touch_screen">
             <property name="text">
-             <string>No Touch Screen</string>
+             <string>No touch screen</string>
             </property>
             <property name="checked">
              <bool>true</bool>
@@ -273,26 +288,10 @@
           <item>
            <widget class="QCheckBox" name="open_world_map">
             <property name="text">
-             <string>Open World Map</string>
+             <string>Open world map</string>
             </property>
             <property name="checked">
              <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item>
-        <widget class="QGroupBox" name="groupBox_4">
-         <property name="title">
-          <string>All Games</string>
-         </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_10">
-          <item>
-           <widget class="QCheckBox" name="remove_events">
-            <property name="text">
-             <string>Remove events</string>
             </property>
            </widget>
           </item>
