--- a/randomizer.ui
+++ b/randomizer.ui
@@ -249,9 +249,9 @@
            </widget>
           </item>
           <item>
-           <widget class="QCheckBox" name="skip_magic_seals">
+           <widget class="QCheckBox" name="no_touch_screen">
             <property name="text">
-             <string>Skip Magic Seals</string>
+             <string>No required touch screen</string>
             </property>
             <property name="checked">
              <bool>true</bool>
@@ -259,12 +259,12 @@
            </widget>
           </item>
           <item>
-           <widget class="QCheckBox" name="no_touch_screen">
+           <widget class="QCheckBox" name="skip_magic_seals">
             <property name="text">
-             <string>No touch screen</string>
+             <string>Skip Magic Seals</string>
             </property>
             <property name="checked">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
            </widget>
           </item>
