--- a/randomizer.ui
+++ b/randomizer.ui
@@ -86,9 +86,9 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
-          <widget class="QCheckBox" name="randomize_items">
+          <widget class="QCheckBox" name="randomize_pickups">
            <property name="text">
-            <string>Items</string>
+            <string>Items/Skills</string>
            </property>
            <property name="checked">
             <bool>true</bool>
@@ -96,12 +96,9 @@
           </widget>
          </item>
          <item>
-          <widget class="QCheckBox" name="randomize_skills">
+          <widget class="QCheckBox" name="randomize_players">
            <property name="text">
-            <string>Skills</string>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
+            <string>Players</string>
            </property>
           </widget>
          </item>
@@ -188,19 +185,7 @@
             </item>
            </layout>
           </item>
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_11">
-            <item>
-             <widget class="QCheckBox" name="randomize_players">
-              <property name="text">
-               <string>Players</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
          </layout>
-         <zorder></zorder>
          <zorder></zorder>
          <zorder></zorder>
          <zorder></zorder>
