--- a/randomizer.ui
+++ b/randomizer.ui
@@ -130,7 +130,7 @@
             <item>
              <widget class="QCheckBox" name="randomize_boss_souls">
               <property name="toolTip">
-               <string>Randomizes the souls dropped by bosses (DoS only).</string>
+               <string>Randomizes the souls dropped by bosses as well as Wallman's glyph (DoS/OoE only).</string>
               </property>
               <property name="text">
                <string>Boss Souls</string>
