--- a/randomizer.ui
+++ b/randomizer.ui
@@ -444,6 +444,36 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>randomize_button</tabstop>
+  <tabstop>clean_rom</tabstop>
+  <tabstop>output_folder</tabstop>
+  <tabstop>seed</tabstop>
+  <tabstop>clean_rom_browse_button</tabstop>
+  <tabstop>output_folder_browse_button</tabstop>
+  <tabstop>randomize_pickups</tabstop>
+  <tabstop>randomize_enemies</tabstop>
+  <tabstop>randomize_enemy_drops</tabstop>
+  <tabstop>randomize_boss_souls</tabstop>
+  <tabstop>enable_glitch_reqs</tabstop>
+  <tabstop>randomize_players</tabstop>
+  <tabstop>randomize_bosses</tabstop>
+  <tabstop>randomize_area_connections</tabstop>
+  <tabstop>randomize_room_connections</tabstop>
+  <tabstop>randomize_starting_room</tabstop>
+  <tabstop>randomize_enemy_ai</tabstop>
+  <tabstop>randomize_item_stats</tabstop>
+  <tabstop>randomize_skill_stats</tabstop>
+  <tabstop>randomize_enemy_stats</tabstop>
+  <tabstop>randomize_weapon_synths</tabstop>
+  <tabstop>name_unnamed_skills</tabstop>
+  <tabstop>fix_first_ability_soul</tabstop>
+  <tabstop>no_touch_screen</tabstop>
+  <tabstop>fix_luck</tabstop>
+  <tabstop>open_world_map</tabstop>
+  <tabstop>about_button</tabstop>
+  <tabstop>tabWidget</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
