--- a/randomizer.ui
+++ b/randomizer.ui
@@ -385,7 +385,18 @@
          <property name="title">
           <string>Portrait of Ruin</string>
          </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_6"/>
+         <layout class="QHBoxLayout" name="horizontalLayout_6">
+          <item>
+           <widget class="QCheckBox" name="dont_randomize_change_cube">
+            <property name="text">
+             <string>Don't randomize Change Cube</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </item>
        <item>
