--- a/randomizer.ui
+++ b/randomizer.ui
@@ -293,9 +293,16 @@
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_13">
             <item>
+             <widget class="QCheckBox" name="randomize_shop">
+              <property name="text">
+               <string>Shop Items</string>
+              </property>
+             </widget>
+            </item>
+            <item>
              <widget class="QCheckBox" name="randomize_wooden_chests">
               <property name="text">
-               <string>Wooden Chest Item Pools</string>
+               <string>Wooden Chest Items</string>
               </property>
              </widget>
             </item>
